--- a/_posts/2022-03-31-test-post.md
+++ b/_posts/2022-03-31-test-post.md
@@ -5,7 +5,7 @@ title: My First Post!!
 
 I'm an awesome PIC16B student and I am running Jekyll! 
 
-'''python
+```python
 	def f(x):
 		return x*x
-'''
+```
